@@ -1,16 +1,26 @@
 package org.daisy.pipeline.cssinlining;
 
-import java.net.MalformedURLException;
+import java.io.File;
+import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
+import org.apache.commons.io.IOUtils;
 import org.w3c.dom.Document;
 
+import cz.vutbr.web.css.CSSException;
 import cz.vutbr.web.css.CSSFactory;
 import cz.vutbr.web.css.StyleSheet;
 import cz.vutbr.web.css.SupportedCSS;
+import cz.vutbr.web.csskit.antlr.CSSParserFactory;
+import cz.vutbr.web.csskit.antlr.CSSParserFactory.SourceType;
 import cz.vutbr.web.domassign.Analyzer;
 import cz.vutbr.web.domassign.StyleMap;
 import cz.vutbr.web.domassign.SupportedCSS21;
@@ -18,6 +28,12 @@ import cz.vutbr.web.domassign.SupportedCSS21;
 public class SpeechSheetAnalyser {
 	private static SupportedCSS SupportedCSS;
 	private static final String Medium = "speech";
+	private static Pattern UrlPattern = Pattern.compile("url\\('?\"?([^)'\"]+)'?\"?\\)");
+
+	private static Pattern AbsoluteUrlPattern = Pattern
+	        .compile("([a-zA-Z][-.+a-zA-Z0-9]*://)|/");
+
+	private Analyzer mAnalyzer;
 
 	static {
 		SupportedCSS = SupportedCSS21.getInstance();
@@ -25,30 +41,31 @@ public class SpeechSheetAnalyser {
 		CSSFactory.registerDeclarationTransformer(new SpeechDeclarationTransformer());
 	}
 
-	private Analyzer mAnalyzer;
-
-	public void analyse(Collection<String> URIs) {
+	public void analyse(Collection<URI> sheetURIs, Collection<String> embeddedCSS,
+	        URI embedContainerURI) throws IOException, URISyntaxException, CSSException {
 		if (!SupportedCSS.isSupportedMedia(Medium)) {
 			throw new IllegalStateException("medium '" + Medium + "' is not supported");
 		}
-		// create a CSS matcher for the given stylesheets
-		List<StyleSheet> styleSheets = new ArrayList<StyleSheet>();
 
-		try {
-			for (String uri : URIs) {
-				if (uri != null && !uri.isEmpty()) {
-					URL url = null;
-					try {
-						url = new URL(uri); //first try
-					} catch (MalformedURLException e) {
-						url = new URL("file://" + uri); //second try
-					}
-					styleSheets.add(CSSFactory.parse(url, "utf-8"));
-				}
+		List<URI> alluris = new ArrayList<URI>();
+		List<String> csscode = new ArrayList<String>(embeddedCSS);
+		for (int k = 0; k < embeddedCSS.size(); ++k)
+			alluris.add(embedContainerURI);
+
+		for (URI uri : sheetURIs) {
+			if (uri != null) {
+				alluris.add(uri);
+				csscode.add(IOUtils.toString(uri.toURL().openStream(), "UTF-8"));
 			}
-		} catch (Exception e) {
-			throw new IllegalArgumentException("could not analyse the stylesheet: "
-			        + e.getMessage());
+		}
+
+		List<StyleSheet> styleSheets = new ArrayList<StyleSheet>();
+		for (int k = 0; k < csscode.size(); ++k) {
+			String basePath = new File(alluris.get(k)).getParent();
+			String withAbsURL = makeURLabsolute(csscode.get(k), basePath);
+			styleSheets.add(CSSParserFactory.parse(withAbsURL, null, SourceType.EMBEDDED,
+			        new URL("http://base")));
+			//we cannot use CSSFactory.parse(withAbsURL) because it tries to convert the null base URL into String.
 		}
 
 		mAnalyzer = new Analyzer(styleSheets);
@@ -56,5 +73,20 @@ public class SpeechSheetAnalyser {
 
 	public StyleMap evaluateDOM(Document doc) {
 		return mAnalyzer.evaluateDOM(doc, Medium, false);
+	}
+
+	static String makeURLabsolute(String csscode, String basePath) {
+		//This ugly hack is necessary because jStyleParser fails to take into 
+		//account the base URI when it parses relative URIs
+		Matcher m = UrlPattern.matcher(csscode);
+		while (m.find()) {
+			String url = m.group(1);
+			Matcher m2 = AbsoluteUrlPattern.matcher(url);
+			if (!m2.lookingAt()) {
+				csscode = csscode.replace(m.group(0), "url('" + Paths.get(basePath, url)
+				        + "')");
+			}
+		}
+		return csscode;
 	}
 }
